Fixed Styling on too small devices

--- a/main.scss
+++ b/main.scss
@@ -197,7 +197,7 @@ nav {
     #screens {
         padding-left: 20%;
         & > div {
-            padding-right: 25px !important;
+            padding-right: 5% !important;
             align-items: flex-end;
         }
     }
